--- a/src/components/sections/MainNav/MainNav.css
+++ b/src/components/sections/MainNav/MainNav.css
@@ -1,12 +1,16 @@
 nav#mainNav {
+  position: fixed;
+  top: 0;
+  left: 0;
   display: flex;
   justify-content: space-between;
   min-width: 100%;
   max-width: 100%;
   width: 100%;
+  height: 56px;
   min-height: 56px;
   max-height: 56px;
-  height: 56px;
+  margin: 0;
   background-color: #1d2a35;
 }
 
@@ -19,12 +23,13 @@ div.main-nav-right-wrapper-container {
   /* border: 1px solid #fff; */
 }
 
-a.main-nav-link {
+a.main-nav-link,
+.main-nav-link {
   color: #fff;
   width: fit-content;
   height: 100%;
   margin: 0 10px;
-  padding: 5px 10px;
+  padding: 5px 8px;
   align-items: center;
   align-content: center;
   text-align: center;
@@ -36,13 +41,67 @@ a.main-nav-link:hover {
   background-color: #04aa6d;
 }
 
-input#mainNavSearchInput {
+a#mainNavUserLink {
+  width: 40px;
+  height: 40px;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  text-align: center;
+  border: 1px solid #fff;
+  border-radius: 100%;
+}
+
+span.search-input-wrapper-container {
   width: 170px;
   height: 34px;
-  padding: 1px 10px;
+  align-items: center;
+  align-content: center;
+  background-color: #fff;
+  border: 1px solid #fff;
   border-radius: 30px;
+}
+
+span.search-input-wrapper-container:focus {
+  outline: 4px solid #04aa6d;
+}
+
+input#mainNavSearchInput {
+  width: 85%;
+  height: 100%;
+  padding: 1px 10px;
+  align-items: center;
+  border-radius: 30px;
+  border: none;
+}
+
+input#mainNavSearchInput:focus {
+  border: none;
+  outline: none;
+  /* border: 4px solid #04aa6d; */
 }
 
 input#mainNavSearchInput::placeholder {
   font-style: italic;
+}
+
+button#toggleModeBtn {
+  min-width: fit-content;
+  max-width: fit-content;
+  width: fit-content;
+  height: fit-content;
+  min-height: fit-content;
+  max-height: fit-content;
+  padding: 0;
+  margin: 0;
+  margin-left: 3px;
+  border: none;
+  border-radius: 100%;
+}
+
+button#toggleModeBtn:hover {
+  background-color: #fff;
+}
+
+button#toggleModeBtn img {
 }
