--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,32 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  min-width: 100vw;
+  max-width: 100vw;
+  width: 100vw;
+  height: 100%;
+  min-height: 100%;
+  max-height: 100%;
+  box-sizing: border-box;
+  margin: 0;
+}
+
+body {
+  min-width: 100%;
+  max-width: 100%;
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+  max-height: 100%;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 input:focus {
-  border: 4px solid #04aa6d;
   outline: none;
+  border: none;
 }
