--- a/src/index.css
+++ b/src/index.css
@@ -13,17 +13,22 @@ html {
   max-height: 100%;
   box-sizing: border-box;
   margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
 
 body {
   min-width: 100%;
   max-width: 100%;
   width: 100%;
-  height: 100%;
-  min-height: 100%;
-  max-height: 100%;
-  margin: 0;
+  height: fit-content;
+  min-height: 86%;
+  max-height: 86%;
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  border: 1px solid #000;
 }
 
 input:focus {
