--- a/src/components/sections/TutorialSidebar/TutorialSidebar.css
+++ b/src/components/sections/TutorialSidebar/TutorialSidebar.css
@@ -1,14 +1,18 @@
 aside {
   display: inline-block;
+  min-width: 20%;
+  max-width: 20%;
   width: 20%;
   height: 100%;
   min-height: 100%;
+  max-height: 100%;
   padding: 5px 0;
   text-align: left;
   align-items: center;
   align-content: center;
   justify-content: center;
-  overflow-y: scroll;
+  overflow-y: scroll !important;
+  overflow-x: scroll !important;
   background-color: #15202b;
   border: 1px solid #000;
 }
@@ -21,6 +25,7 @@ aside h2 {
 
 div.tutorial-sidebar-links-wrapper-container {
   width: 100%;
+  height: fit-content;
   text-align: left;
   padding: 5px 0 5px 30px;
   border: 1px solid #000;
