--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,9 @@ html {
   min-width: 100vw;
   max-width: 100vw;
   width: 100vw;
-  height: 100%;
-  min-height: 100%;
-  max-height: 100%;
+  height: 100vh;
+  min-height: 100vh;
+  max-height: 100vh;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -21,13 +21,14 @@ body {
   min-width: 100%;
   max-width: 100%;
   width: 100%;
-  height: fit-content;
+  height: 86%;
   min-height: 86%;
   max-height: 86%;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  overflow-y: hidden;
   border: 1px solid #000;
 }
 
