--- a/src/components/sections/TutorialSidebar/TutorialSidebar.css
+++ b/src/components/sections/TutorialSidebar/TutorialSidebar.css
@@ -1,26 +1,45 @@
 aside {
   display: inline-block;
-  min-width: 20%;
-  max-width: 20%;
-  width: 20%;
+  min-width: 100%;
+  max-width: 100%;
+  width: 100%;
   height: 100%;
   min-height: 100%;
   max-height: 100%;
   padding: 5px 0;
   text-align: left;
-  align-items: center;
-  align-content: center;
+  /* align-items: center; */
+  /* align-content: center; */
   justify-content: center;
-  overflow-y: scroll !important;
-  overflow-x: scroll !important;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
   background-color: #15202b;
   border: 1px solid #000;
+}
+
+::-webkit-scrollbar {
+  width: 16px;
+  height: 16px;
+}
+
+::-webkit-scrollbar-track {
+  background: #15202b;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #404e59;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #404e59;
 }
 
 aside h2 {
   display: block;
   color: #fff;
   padding-left: 10px;
+  border: 1px solid #fff;
 }
 
 div.tutorial-sidebar-links-wrapper-container {
@@ -28,7 +47,7 @@ div.tutorial-sidebar-links-wrapper-container {
   height: fit-content;
   text-align: left;
   padding: 5px 0 5px 30px;
-  border: 1px solid #000;
+  border: 1px solid #fff;
 }
 
 .tutorial-sidebar-link {
