--- a/src/index.css
+++ b/src/index.css
@@ -21,14 +21,15 @@ body {
   min-width: 100%;
   max-width: 100%;
   width: 100%;
-  height: 86%;
-  min-height: 86%;
-  max-height: 86%;
-  box-sizing: border-box;
+  height: 88%;
+  min-height: 100%;
+  max-height: 100%;
   margin: 0;
   padding: 0;
+  padding-top: 85px;
   overflow-x: hidden;
   overflow-y: hidden;
+  box-sizing: border-box;
   border: 1px solid #000;
 }
 
